# data2slideimg

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  test_input.json  test_map_input.json  test_vertical.json
.github/workflows/: docker.yml
docs/: architecture.md  usage_guide_ja.md
docs/samples/: README.md  bar_chart.json  bar_chart_vertical.json  image_sample.json  image_sample_vertical.json  japanese_sample.json  japanese_sample_vertical.json  line_chart.json  line_chart_vertical.json  map_sample.json  map_sample_vertical.json  pie_chart.json  pie_chart_vertical.json  table_sample.json  table_sample_vertical.json  vertical_sns_analysis.json
src/: cli.py  graph_renderer.py  image_generator.py  layout.py  main.py  models.py
